--- a/src/main/webapp/css/UserList.css
+++ b/src/main/webapp/css/UserList.css
@@ -1,7 +1,15 @@
+@charset "UTF-8";
 body {
     background-image: url("haikei.jpg");
     background-size: cover;
     background-repeat: no-repeat;
+}
+
+h1{
+  color:black;
+  background-color:#ffff69;
+  font-size: 130%;
+  border:2px solid black;
 }
 
 .button {
